# RaveGrid

./: .gitignore  config.toml  pyproject.toml
doc/: architecture-et-pratiques.md  description fonctionnel.md  environnement-et-installation.md  vision-marqueurs-aruco.md
src/ravegrid/: __init__.py  __main__.py  cli.py
src/ravegrid/app/: loop.py
src/ravegrid/capture/: base.py  camera.py  selector.py
src/ravegrid/config/: loader.py  schema.py  writer.py
src/ravegrid/domain/: board.py
src/ravegrid/network/: udp_sender.py
src/ravegrid/ui/: annotator.py  base.py  pygame_display.py
src/ravegrid/vision/: board_detector.py  cell_classifier.py  grid_splitter.py  rectifier.py
tools/: calibrate_colors.py  generate_markers.py
